--- a/app.css
+++ b/app.css
@@ -9,6 +9,7 @@ html, body{
   height: 100%
 }
 /* NodeJS - The Complete Guide from Academind*/
+
 .main-header {
     width: 100%;
     height: 3.5rem;
@@ -44,4 +45,13 @@ html, body{
 .main-header__item a.active {
 color: #903bff;
 }
-  
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-item img {
+  width: 40%;
+  height: 40%;
+}
